minor tweaks. got rid of the warnings